Add chosen incentives to donation API
