# server/src/main/kotlin/fi/vauhtijuoksu/vauhtijuoksuapi/server/impl/donation/DonationApiModel.kt
@@ -10,6 +10,18 @@ import io.vertx.core.json.JsonObject
 import java.util.Date
 import java.util.UUID
 
+data class ChosenIncentiveInDonationApi(
+    @JsonProperty("incentive_id")
+    val incentiveId: UUID,
+    val parameter: String?,
+)
+
+data class IncentiveInDonationApi(
+    val code: String,
+    @JsonProperty("chosen_incentives")
+    val chosenIncentives: List<ChosenIncentiveInDonationApi>,
+)
+
 data class DonationApiModel(
     val id: UUID,
     @JsonFormat(shape = JsonFormat.Shape.STRING)
@@ -21,6 +33,7 @@ data class DonationApiModel(
     val read: Boolean = false,
     @JsonProperty("external_id")
     val externalId: String?,
+    val incentives: List<IncentiveInDonationApi>,
 ) :
     ApiModel<Donation> {
     override fun toModel(): Donation {
@@ -49,6 +62,32 @@ data class DonationApiModel(
                 donation.amount,
                 donation.read,
                 donation.externalId,
+                listOf()
+            )
+        }
+
+        fun fromDonationWithCodes(donationWithCodes: DonationWithCodes): DonationApiModel {
+            val donation = donationWithCodes.donation
+            val codes = donationWithCodes.incentives
+            return DonationApiModel(
+                donation.id,
+                donation.timestamp,
+                donation.name,
+                donation.message,
+                donation.amount,
+                donation.read,
+                donation.externalId,
+                codes.map { generatedIncentive ->
+                    IncentiveInDonationApi(
+                        generatedIncentive.generatedCode.code,
+                        generatedIncentive.chosenIncentives.map {
+                            ChosenIncentiveInDonationApi(
+                                it.incentiveId,
+                                it.parameter
+                            )
+                        }
+                    )
+                }
             )
         }
     }
